--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "2025-02-22T14:12:31 \u2013 hIJnjqm4OwkSfTYnoHiX",
     "2025-02-28T22:37:31 \u2013 KqxekvpityI5X3Fgz7DJ",
     "2025-03-12T19:21:46 \u2013 fAiUKT1MfsQ3TXs8kwmn",
-    "2025-05-04T09:08:43 \u2013 HBDogwZCAGRexNMIP7ue"
+    "2025-05-04T09:08:43 \u2013 HBDogwZCAGRexNMIP7ue",
+    "2025-06-24T16:00:18 \u2013 jFTo9A4EdosVSUxFrfu5"
   ]
 }
