--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "2023-10-03T19:15:09 \u2013 35dmvfw3UOYSU15t8LtQ",
     "2023-12-01T11:33:00 \u2013 PbDcvEPEpbB1me3wNQOR",
     "2024-06-24T20:00:23 \u2013 QmaIsFqv50Mwn79AJslq",
-    "2024-08-23T07:48:21 \u2013 fjQMIeiqEMkk13P2t7Kz"
+    "2024-08-23T07:48:21 \u2013 fjQMIeiqEMkk13P2t7Kz",
+    "2025-06-25T19:34:37 \u2013 mt72P1GKQ1Mbovdlt3mt"
   ]
 }
